--- a/c.html
+++ b/c.html
@@ -136,28 +136,28 @@
                         <div class="text__pyton">
                             Обучающие ресурсы
                         </div>
-                        <li><a href="https://practicum.yandex.ru/backend-developer/">
-                                Курс от Яндекс
-                                «Python-разроботчик»
+                        <li><a
+                                href="https://netology.ru/programs/developer1c?utm_source=yandex&utm_medium=cpc&utm_campaign=brand_all_ou_dynamic_ya_search&utm_content=11952908695&utm_term=&yclid=17108923871870058495">
+                                Курс от Netology
+
                             </a></li>
-                        <li><a href="https://skillbox.ru/course/profession-python-trial/">
+                        <li><a href="https://skillbox.ru/course/profession-1c-new2/">
                                 Курс от Skillbox
                             </a></li>
                         <p>Блогеры YouTube</p>
-                        <li><a href="https://www.youtube.com/playlist?list=PL0lO_mIqDDFXgfuxOEDTCwsWmKezOaDTu">
-                                Гоша Дударь - 21
-                                урок (для
-                                начинающих)
+                        <li><a href="https://www.youtube.com/playlist?list=PLQOaTSbfxUtCrKs0nicOg2npJQYSPGO9r">
+                                SimpleCode - 100
+                                уроков
                             </a></li>
                         <li>
-                            <a href="https://www.youtube.com/playlist?list=PLs2IpQwiXpT3SqbqPzLCEy1fow9G7g0oY">
-                                Иван Викторовч -
-                                18 уроков
-                                (для начинающих)
+                            <a href="https://www.youtube.com/playlist?list=PL0lO_mIqDDFXNfqIL9PHQM7Wg_kOtDZsW">
+                                Гоша Дударь -
+                                27 уроков
+
                             </a>
                         </li>
-                        <li><a href="https://www.youtube.com/playlist?list=PLDyJYA6aTY1lPWXBPk0gw6gR8fEtPDGKa">
-                                Школа itProger - 21 урок
+                        <li><a href="https://www.youtube.com/playlist?list=PLA0M1Bcd0w8zHoZcf7IWTM4aQESDSErUs">
+                                selfedu - 20 уроков
                             </a></li>
                     </ul>
                 </div>
