--- a/java.html
+++ b/java.html
@@ -158,7 +158,7 @@
                         <li>
                             <a href="https://www.youtube.com/playlist?list=PL786bPIlqEjRDXpAKYbzpdTaOYsWyjtCX">
                                 Уроки Java
-                                415 уроков
+                                - 415 уроков
                             </a>
                         </li>
                         <li><a href="https://www.youtube.com/playlist?list=PLZqgWWF4O-zgDLDBMva788aJf_vQ9GKJv">
