--- a/javascript.html
+++ b/javascript.html
@@ -131,28 +131,30 @@
                         <div class="text__pyton">
                             Обучающие ресурсы
                         </div>
-                        <li><a href="https://practicum.yandex.ru/backend-developer/">
+                        <li><a
+                                href="https://practicum.yandex.ru/web/?utm_source=yandex&utm_medium=cpc&utm_campaign=Yan_Sch_RF_Webr_Gener_exp_%20bnft_1-1_460&utm_content=sty_search:s_none:cid_71465377:gid_4826842375:kw_js%20%D0%B8%D0%B7%D1%83%D1%87%D0%B0%D1%82%D1%8C:pid_36562076369:aid_11754345669:crid_0:rid_:p_3:pty_premium:mty_syn:mkw_:dty_desktop:cgcid_0:rn_%D0%9C%D0%B0%D0%B3%D0%BD%D0%B8%D1%82%D0%BE%D0%B3%D0%BE%D1%80%D1%81%D0%BA:rid_235&utm_term=js%20%D0%B8%D0%B7%D1%83%D1%87%D0%B0%D1%82%D1%8C&yclid=6638778547187220479">
                                 Курс от Яндекс
-                                «Python-разроботчик»
+                                «Web-разроботчик»
                             </a></li>
-                        <li><a href="https://skillbox.ru/course/profession-python-trial/">
+                        <li><a
+                                href="https://skillbox.ru/course/frontend-pro-expert/?utm_source=yandex&utm_medium=cpc&utm_campaign=841_frontend-pro-expert_yandex_cpc_master-campaign_course_ru_all_gizatullin_66711460&utm_content=adg_4726831413|ad_11290611790|ph_34553684899|key_---autotargeting|dev_desktop|pst_premium_1|rgnid_235_%D0%9C%D0%B0%D0%B3%D0%BD%D0%B8%D1%82%D0%BE%D0%B3%D0%BE%D1%80%D1%81%D0%BA|placement_none|creative_{creative_name}&utm_term=---autotargeting&yclid=15423806216785362943">
                                 Курс от Skillbox
                             </a></li>
                         <p>Блогеры YouTube</p>
-                        <li><a href="https://www.youtube.com/playlist?list=PL0lO_mIqDDFXgfuxOEDTCwsWmKezOaDTu">
-                                Гоша Дударь - 21
+                        <li><a href="https://www.youtube.com/playlist?list=PLQOaTSbfxUtB4yXAyTLvI1QQf8wEEOkl5">
+                                SimpleCode - 12 уроков
                                 урок (для
                                 начинающих)
                             </a></li>
                         <li>
-                            <a href="https://www.youtube.com/playlist?list=PLs2IpQwiXpT3SqbqPzLCEy1fow9G7g0oY">
-                                Иван Викторовч -
-                                18 уроков
+                            <a href="https://www.youtube.com/playlist?list=PLM7wFzahDYnGiAEISqw1Lal_T9heUvbar">
+                                Алекс Лущенко -
+                                43 урока
                                 (для начинающих)
                             </a>
                         </li>
-                        <li><a href="https://www.youtube.com/playlist?list=PLDyJYA6aTY1lPWXBPk0gw6gR8fEtPDGKa">
-                                Школа itProger - 21 урок
+                        <li><a href="https://www.youtube.com/playlist?list=PLM6XATa8CAG7DDIBjNVd78Fv5Ueo930IV">
+                                Фрилансер по жизни - 19 уроков
                             </a></li>
                     </ul>
                 </div>
