--- a/php.html
+++ b/php.html
@@ -157,7 +157,7 @@
                             </a>
                         </li>
                         <li><a href="https://www.youtube.com/playlist?list=PLDyJYA6aTY1m5zGQVcEYIoSFz2GD8u7cC">
-                                Школа itProger - 20 урок
+                                Школа itProger - 20 уроков
                             </a></li>
                     </ul>
                 </div>
