--- a/index1.html
+++ b/index1.html
@@ -110,7 +110,7 @@
                 <div class="about__item1">
                     <div class="about__item-text1">
                         <div class="text">
-                            <p>Python используют компании-гиганты</p>
+                            <p>Python в масштабных проектах</p>
                         </div>
                         <hr width="100%">
 
