--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=1170">
 </head>
 
 
