--- a/php.html
+++ b/php.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/php.css">
+    <meta name="viewport" content="width=1170">
 </head>
 
 <body>
